@@ -24,6 +24,7 @@ import Logs.Transfer
 import Utility.Gpg (KeyId)
 import Build.SysConfig (packageversion)
 import Types.ScheduledActivity
+import Assistant.WebApp.RepoId
 
 import Yesod.Static
 import Text.Hamlet
@@ -214,5 +215,9 @@ instance PathPiece ThreadName where
 	fromPathPiece = readish . unpack
 
 instance PathPiece ScheduledActivity where
+	toPathPiece = pack . show
+	fromPathPiece = readish . unpack
+
+instance PathPiece RepoId where
 	toPathPiece = pack . show
 	fromPathPiece = readish . unpack
