@@ -1,16 +1,0 @@
-<div .span9 .hero-unit>
-  $if null stalled
-    <h2>
-      The repository is still not finished being set up. Patience..
-    <p>
-      If you suspect something is wrong, you might want to take a look #
-      at the 
-      <a href="@{LogR}">
-        Log
-  $else
-    <h2>
-      Setting up this repository seems to have stalled!
-    <p>
-      Make sure the remote system is available and
-      <a .btn .btn-primary href="@{RetryUnfinishedRepositoriesR}">
-        Retry
